<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_general_theme"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="15dp"
        android:paddingTop="4dp"
        android:paddingEnd="15dp"
        android:paddingBottom="4dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/tv_general_theme_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/tv_general_theme_summary"
            android:gravity="center_vertical"
            android:text="@string/settings_general_theme"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_general_theme_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="Light"
            android:textSize="15sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_general_screen"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="15dp"
        android:paddingTop="4dp"
        android:paddingEnd="15dp"
        android:paddingBottom="4dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/tv_general_screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/tv_general_screen_summary"
            android:gravity="center_vertical"
            android:text="@string/settings_general_startup_screen"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_general_screen_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="Kobra"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_general_schedule_time"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="15dp"
        android:paddingTop="4dp"
        android:paddingEnd="15dp"
        android:paddingBottom="4dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/tv_general_schedule_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/tv_general_schedule_time_summary"
            android:gravity="center_vertical"
            android:text="@string/settings_general_schedule_time"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_general_schedule_time_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical|end"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="14 hours"
            android:textSize="17sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_general_delete_log"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:paddingStart="15dp"
        android:paddingTop="4dp"
        android:paddingEnd="15dp"
        android:paddingBottom="4dp"
        android:scrollbars="none">

        <TextView
            android:id="@+id/tv_general_delete_log_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@id/iv_general_delete_log_icon"
            android:gravity="center_vertical"
            android:text="@string/settings_general_delete_logs"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_general_delete_log_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/tv_general_delete_log_title"
            android:layout_toStartOf="@id/iv_general_delete_log_icon"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="3dp"
            android:text="@string/settings_general_delete_logs_summary_off"
            android:textSize="13sp" />

        <ImageView
            android:id="@+id/iv_general_delete_log_icon"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            app:srcCompat="@drawable/ic_toggle_off" />

    </RelativeLayout>

</LinearLayout>